Update Vercel configuration for check.php endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.0",
-      "maxDuration": 10
+    "check.php": {
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.php"
+      "src": "/api/check",
+      "dest": "/check.php"
     },
     {
       "src": "/(.*)",
