--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,7 @@
 {
-  "version": 2,
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.6.0",
-      "maxDuration": 10
+      "runtime": "vercel-php@0.6.0"
     }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.php"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  }
 }
